--- a/YouTubeAISummaryAndQA_Support.html
+++ b/YouTubeAISummaryAndQA_Support.html
@@ -491,8 +491,8 @@
     <footer>
         <p>&copy; 2025 Karma Niti LLC. All rights reserved.</p>
         <p>
-            <a href="privacy-policy.html">Privacy Policy</a> | 
-            <a href="terms-of-service.html">Terms of Service</a>
+            <a href="https://karmaniti.github.io/YouTubeAISummaryAndQA0/YouTubeAISummaryAndQA_Privacy_Policy.html">Privacy Policy</a> | 
+            <a href="https://karmaniti.github.io/YouTubeAISummaryAndQA0/YouTubeAISummaryAndQA_Terms_Of_Service.html">Terms of Service</a>
         </p>
     </footer>
 </body>
